Added targetOrganismPrimaryClassification materialSample will now return the classification (map of rank name, rank) of the target organim if there is only one